fix(switch): high contrast checked state

--- a/src/components/_switch.scss
+++ b/src/components/_switch.scss
@@ -88,6 +88,7 @@ button[role="switch"] {
 		&[aria-checked="true"],
 		&[aria-checked="true"]::after {
 			background-color: Highlight;
+			color: HighlightText;
 		}
 
 		&[aria-checked="true"]::before {
